# autoform-bot

./: README.md  pyproject.toml
core/inference/: client.py
core/inference/sdk/: aristotle.py  aristotle_test.py
docs/pipeline/: bot.md
